--- a/alta.html
+++ b/alta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - SoundTecITB</title>
+    <title>Alta - SoundTecITB</title>
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/signup.css">
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
@@ -29,7 +29,7 @@
     <main>
         <section class="form" id="form">
             <header>
-                <h2>Registrarse</h2>
+                <h2>Dar-se de alta</h2>
             </header>
             <form action="#" method="get">
                 <section class="personal_data">
