--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#artist">Artistas</a></li>
                 <li><a href="#festivals">Eventos</a></li>
-                <li><a href="./signup.html#contact">Contacto</a></li>
-                <li><a href="./signup.html">Alta</a></li>
+                <li><a href="./alta.html#contact">Contacto</a></li>
+                <li><a href="./alta.html">Alta</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
                 <p>4 dias, 6 escenarios y mas de 120 artists en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
                 <div>
-                    <a href="./signup.html" class="mainBtn primary">Entradas</a>
+                    <a href="./alta.html" class="mainBtn primary">Entradas</a>
                     <a href="#releases" class="mainBtn secondary">Descubrir Musica</a>
                 </div>
                 <div class="homeTags">
@@ -48,7 +48,7 @@
             <div>
                 <header>
                     <h2>Lanzamientos</h2>
-                    <a href="./explore.html#releases">Ver todo</a>
+                    <a href="./festivales.html">Ver todo</a>
                 </header>
                 <div>
                     <article>
@@ -56,7 +56,7 @@
                         <div>
                             <h3>Neon Skies</h3>
                             <p>Atlas · Synthpop</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -64,7 +64,7 @@
                         <div>
                             <h3>Hologram</h3>
                             <p>Kaia Nova · Electropop</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -72,7 +72,7 @@
                         <div>
                             <h3>Mar de Sonidos</h3>
                             <p>Marea Azul · Dream pop</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -80,7 +80,7 @@
                         <div>
                             <h3>Altitude</h3>
                             <p>Vértigo · Electronica</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -88,7 +88,7 @@
                         <div>
                             <h3>Midnight City</h3>
                             <p>Neon Parade · SynthTecITB</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -96,7 +96,7 @@
                         <div>
                             <h3>Echoes</h3>
                             <p>Arpeggio · Ambient</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -104,7 +104,7 @@
                         <div>
                             <h3>Stardust</h3>
                             <p>Halo · Alt Pop</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -112,7 +112,7 @@
                         <div>
                             <h3>Paper TecITBs</h3>
                             <p>Lykke · Indie</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -120,7 +120,7 @@
                         <div>
                             <h3>Solaris</h3>
                             <p>Dorian · Alt Rock</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -128,7 +128,7 @@
                         <div>
                             <h3>Oblivion</h3>
                             <p>M83 · Synth</p>
-                            <a href="./details.html">Más info</a>
+                            <a href="./detalle.html">Más info</a>
                         </div>
                     </article>
                 </div>
@@ -138,7 +138,7 @@
             <div>
                 <header>
                     <h2>Artistas destacados</h2>
-                    <a href="./explore.html#artist">Var Ranking</a>
+                    <a href="./festivales.html">Var Ranking</a>
                 </header>
                 <div>
                     <article>
