Add: Make some element clickable

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div>
                             <h3>Neon Skies</h3>
                             <p>Atlas · Synthpop</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -64,7 +64,7 @@
                         <div>
                             <h3>Hologram</h3>
                             <p>Kaia Nova · Electropop</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -72,7 +72,7 @@
                         <div>
                             <h3>Mar de Sonidos</h3>
                             <p>Marea Azul · Dream pop</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -80,7 +80,7 @@
                         <div>
                             <h3>Altitude</h3>
                             <p>Vértigo · Electronica</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -88,7 +88,7 @@
                         <div>
                             <h3>Midnight City</h3>
                             <p>Neon Parade · SynthTecITB</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -96,7 +96,7 @@
                         <div>
                             <h3>Echoes</h3>
                             <p>Arpeggio · Ambient</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -104,7 +104,7 @@
                         <div>
                             <h3>Stardust</h3>
                             <p>Halo · Alt Pop</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -112,7 +112,7 @@
                         <div>
                             <h3>Paper TecITBs</h3>
                             <p>Lykke · Indie</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -120,7 +120,7 @@
                         <div>
                             <h3>Solaris</h3>
                             <p>Dorian · Alt Rock</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                     <article>
@@ -128,7 +128,7 @@
                         <div>
                             <h3>Oblivion</h3>
                             <p>M83 · Synth</p>
-                            <a href="./detalle.html">Más info</a>
+                            <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
                 </div>
@@ -142,60 +142,76 @@
                 </header>
                 <div>
                     <article>
-                        <img src="./assets/img/artists/artist.png" alt="Artista Kala Nova">
-                        <div>
-                            <h3>Kala Nova</h3>
-                            <p>Electropop · <span>★★★★☆</span></p>
-                        </div>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/artist.png" alt="Artista Kala Nova">
+                            <div>
+                                <h3>Kala Nova</h3>
+                                <p>Electropop · <span>★★★★☆</span></p>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/artist.png" alt="Artista Atlas">
-                        <div>
-                            <h3>Atlas</h3>
-                            <p>Synthpop · <span>★★★★☆</span></p>
-                        </div>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/artist.png" alt="Artista Atlas">
+                            <div>
+                                <h3>Atlas</h3>
+                                <p>Synthpop · <span>★★★★☆</span></p>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/artist.png" alt="Artista Vértigo">
-                        <div>
-                            <h3>Vértigo</h3>
-                            <p>Electrónica · <span>★★★★★</span></p>
-                        </div>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/artist.png" alt="Artista Vértigo">
+                            <div>
+                                <h3>Vértigo</h3>
+                                <p>Electrónica · <span>★★★★★</span></p>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/artist.png" alt="Artista Lykke">
-                        <div>
-                            <h3>Lykke</h3>
-                            <p>Indie · <span>★★★★☆</span></p>
-                        </div>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/artist.png" alt="Artista Lykke">
+                            <div>
+                                <h3>Lykke</h3>
+                                <p>Indie · <span>★★★★☆</span></p>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/artist.png" alt="Artista Neon Parade">
-                        <div>
-                            <h3>Neon Parade</h3>
-                            <p>SynthTecITB · <span>★★★★☆</span></p>
-                        </div>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/artist.png" alt="Artista Neon Parade">
+                            <div>
+                                <h3>Neon Parade</h3>
+                                <p>SynthTecITB · <span>★★★★☆</span></p>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/artist.png" alt="Artista Halo">
-                        <div>
-                            <h3>Halo</h3>
-                            <p>Alt Pop · <span>★★★★☆</span></p>
-                        </div>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/artist.png" alt="Artista Halo">
+                            <div>
+                                <h3>Halo</h3>
+                                <p>Alt Pop · <span>★★★★☆</span></p>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/artist.png" alt="Artista Marea Azul">
-                        <div>
-                            <h3>Marea Azul</h3>
-                            <p>Dream pop · <span>★★★★☆</span></p>
-                        </div>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/artist.png" alt="Artista Marea Azul">
+                            <div>
+                                <h3>Marea Azul</h3>
+                                <p>Dream pop · <span>★★★★☆</span></p>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/artist.png" alt="Artista Arpeggio">
-                        <div>
-                            <h3>Arpeggio</h3>
-                            <p>Ambient · <span>★★★★☆</span></p>
-                        </div>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/artist.png" alt="Artista Arpeggio">
+                            <div>
+                                <h3>Arpeggio</h3>
+                                <p>Ambient · <span>★★★★☆</span></p>
+                            </div>
+                        </a>
                     </article>
                 </div>
             </div>
@@ -210,34 +226,40 @@
             <div>
                 <div class="festivalMainSection">
                     <article>
-                        <img src="./assets/img/festivals/festival.png" alt="Festival de Primavera Sound">
-                        <div>
-                            <h3>Primavera Sound</h3>
-                            <p>Barcelona · Finales de mayo/primera semana de junio · Headlines: varios</p>
-                            <span>Indle</span>
-                            <span>Electónica</span>
-                            <span>Pop</span>
-                        </div>
+                        <a href="./detalle.html#festival">
+                            <img src="./assets/img/festivals/festival.png" alt="Festival de Primavera Sound">
+                            <div>
+                                <h3>Primavera Sound</h3>
+                                <p>Barcelona · Finales de mayo/primera semana de junio · Headlines: varios</p>
+                                <span>Indle</span>
+                                <span>Electónica</span>
+                                <span>Pop</span>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/festivals/festival.png" alt="Festival de Aurora Fest">
-                        <div>
-                            <h3>Aurora Fest</h3>
-                            <p>Montjuïc · 12-14 Jul · Headlines: Atlas, Kaia Nova</p>
-                            <span>Escenografía</span>
-                            <span>Sostenible</span>
-                            <span>Experiencial</span>
-                        </div>
+                        <a href="./detalle.html#festival">
+                            <img src="./assets/img/festivals/festival.png" alt="Festival de Aurora Fest">
+                            <div>
+                                <h3>Aurora Fest</h3>
+                                <p>Montjuïc · 12-14 Jul · Headlines: Atlas, Kaia Nova</p>
+                                <span>Escenografía</span>
+                                <span>Sostenible</span>
+                                <span>Experiencial</span>
+                            </div>
+                        </a>
                     </article>
                     <article>
-                        <img src="./assets/img/festivals/festival.png" alt="Festival de Altitude">
-                        <div>
-                            <h3>Altitude</h3>
-                            <p>Andorra · 20-22 Feb · Headlines: M83, Halo</p>
-                            <span>Major DJ</span>
-                            <span>Tecnología</span>
-                            <span>Aftermovie</span>
-                        </div>
+                        <a href="./detalle.html#festival">
+                            <img src="./assets/img/festivals/festival.png" alt="Festival de Altitude">
+                            <div>
+                                <h3>Altitude</h3>
+                                <p>Andorra · 20-22 Feb · Headlines: M83, Halo</p>
+                                <span>Major DJ</span>
+                                <span>Tecnología</span>
+                                <span>Aftermovie</span>
+                            </div>
+                        </a>
                     </article>
                 </div>
                 <aside>
