Fix: bug jumping from index to details

--- a/detalle.html
+++ b/detalle.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <section class="release">
+        <section class="release" id="release">
             <div>
                 <header>
                     <h2>Lanzamiento</h2>
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </section>
-        <section class="artist">
+        <section class="artist" id="artist">
             <div>
                 <header>
                     <h2>Artista</h2>
