--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div>
                 <header>
                     <h2>Artistas destacados</h2>
-                    <a href="./festivales.html">Var Ranking</a>
+                    <a href="./festivales.html#artist">Var Ranking</a>
                 </header>
                 <div>
                     <article>
