--- a/detalle.html
+++ b/detalle.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details - SoundTecITB</title>
+    <title>Detalles - SoundTecITB</title>
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/detalle.css">
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
@@ -36,22 +36,20 @@
                 <div>
                     <img src="./assets/img/festivals/Festival_Primavera_Sound.png" alt="Festival Primavera Sound">
                     <div>
-                        <article>
+                        <p>
                             El Festival Primavera Sound es un reconocido evento musical que se celebra cada año en Barcelona y otras ciudades del mundo. 
                             Destaca por su programación ecléctica y vanguardista, que reúne a artistas de diversos géneros como indie, rock, pop, electrónica, hip hop y música experimental. 
                             Es conocido por su cuidado curatorial, su ambiente urbano junto al mar y por atraer a público internacional. 
                             Con el tiempo se ha convertido en uno de los festivales más influyentes de Europa.
-                        </article>
-                        <article>
-                            <ul>
-                                <li><p><strong>Ubicación principal:&nbsp;</strong>Barcelona, Parc del Fòrum</p></li>
-                                <li><p><strong>Géneros:&nbsp;</strong>Indie, electrónica, rock, pop, hip-hop, experimental</p></li>
-                                <li><p><strong>Periodicidad:&nbsp;</strong>Anual (finales de mayo / inicios de junio)</p></li>
-                                <li><p><strong>Año de inicio:&nbsp;</strong>2001</p></li>
-                                <li><p><strong>Público habitual:&nbsp;</strong>Internacional, amplio rango de edades, amantes de la música alternativa y contemporánea</p></li>
-                                <li><p><strong>Extensiones:&nbsp;</strong>Primavera Sound Porto, ediciones puntuales en otras ciudades</p></li>
-                            </ul>
-                        </article>
+                        </p>
+                        <ul>
+                            <li><p><strong>Ubicación principal:&nbsp;</strong>Barcelona, Parc del Fòrum</p></li>
+                            <li><p><strong>Géneros:&nbsp;</strong>Indie, electrónica, rock, pop, hip-hop, experimental</p></li>
+                            <li><p><strong>Periodicidad:&nbsp;</strong>Anual (finales de mayo / inicios de junio)</p></li>
+                            <li><p><strong>Año de inicio:&nbsp;</strong>2001</p></li>
+                            <li><p><strong>Público habitual:&nbsp;</strong>Internacional, amplio rango de edades, amantes de la música alternativa y contemporánea</p></li>
+                            <li><p><strong>Extensiones:&nbsp;</strong>Primavera Sound Porto, ediciones puntuales en otras ciudades</p></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -88,7 +86,7 @@
                 </header>
                 <div>
                     <img src="./assets/img/artists/M83.png" alt="M83">
-                    <article>
+                    <div>
                         <p>
                             M83 es una banda francesa de música electrónica liderado por Anthony Gonzalez. 
                             Su sonido combina elementos de <strong>dream pop, ambient, synthpop y electrónica cinematográfica</strong>. 
@@ -101,7 +99,7 @@
                             Temas como "Wait", "Reunion" o "Outro" también se han convertido en piezas muy utilizadas en 
                             películas, anuncios y series de televisión.
                         </p>
-                    </article>
+                    </div>
                 </div>
             </div>
         </section>
